# Serial_Server_Test

CSerialClient_TestApp/: CSerialClient_TestApp.sln
CSerialClient_TestApp/CSerialClient_TestApp/: CClientResponseThread.cpp  CClientResponseThread.h  CClientTcpRecvThread.cpp  CClientTcpRecvThread.h  CEvent.cpp  CEventEx.cpp  CMakeLists.txt  CSerialClient.cpp  CSerialClient.h  CSerialClient_TestApp.vcxproj  CTcpRecvThread.cpp  CTcpRecvThread.h  main.cpp
CSerialServer_TestApp/: CSerialServer_TestApp.sln
CSerialServer_TestApp/CSerialServer_TestApp/: CConfFile.cpp  CConfFile.h  CEvent.cpp  CLog.h  CMakeLists.txt  CSerialRecvThread.cpp  CSerialRecvThread.h  CSerialServer.cpp  CSerialServer.h  CSerialServer_TestApp.vcxproj  CSerialThread.cpp  CSerialThread.h  CServerConnectMonitoringThread.cpp  CServerConnectMonitoringThread.h  CServerResponseThread.cpp  CServerResponseThread.h  CServerTcpRecvThread.cpp  CServerTcpRecvThread.h  CTcpRecvThread.cpp  CTcpRecvThread.h  main.cpp
SerialThread_TestApp/: SerialThread_TestApp.sln
SerialThread_TestApp/SerialThread_TestApp/: CConfFile.cpp  CConfFile.h  CLog.cpp  CSerialRecvThread.cpp  CSerialRecvThread.h  CSerialThread.cpp  CSerialThread.h  CThread.cpp  CThread.h  ResultHeader.h  SerialThread_TestApp.vcxproj  main.cpp
